--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7AcousticGuitarBallad.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7AcousticGuitarBallad.html
@@ -18,10 +18,7 @@
         </nav>
     </header>
     <main>
-        <img scr="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/ElectricRock.png"/>
-        <img scr="Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/ElectricRock.png">
-        <img scr="/Users/thomastooten/Documents/GitHub/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/ElectricRock.png">
-
+      
         <section id='steezy'>
             <h2>Accoustiuc Guitar Ballad</h2>
         </section>
@@ -30,55 +27,55 @@
         </section>
         <div class="lesson-block">
             
-            <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/145D6-.png" alt="Electric Rock">        
+            <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/audio/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/145D6-.png" alt="Electric Rock" width="100%">        
         </div>
         <div class="lesson-block">
             <p>key of A</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of A).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/audio/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of A).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Ab</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of Ab).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/audio/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of Ab).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of B</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of B).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/audio/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of B).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Bb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of Bb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/audio/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of Bb).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of C</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of C).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/audio/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of C).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of D</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of D).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/audio/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of D).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Db</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of Db).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/audio/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of Db).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of E</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of E).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/audio/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of E).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Eb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of Eb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/audio/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of Eb).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of F</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of F).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/audio/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of F).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of G</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of G).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/audio/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of G).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Gb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson7/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of Gb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/audio/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad/Chords 1, 4, 5D, 6- - Acoustic Guitar Ballad (key of Gb).mp3"></audio>
         </div>
  
  
