--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7Index.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7Index.html
@@ -35,33 +35,27 @@
         <h2>Modules</h2>
         <div id="links-container">
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6ClassicRock.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7AcousticGuitarBallad.htmll">
                     <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/afbeeldingen/A1.png" alt="Counrty Waltz">
-                    <span>Bossa Nova</span>
+                    <span>Acoustic ballad</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6ClassicRock.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/afbeeldingen/A2.png" alt="Dreamy">
-                    <span>Classic Rock</span>
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7Chillout.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/afbeeldingen/A6.png" alt="Dreamy">
+                    <span>Chillout</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6Funk.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7ElectricRock.html">
                     <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/afbeeldingen/A3.png" alt="Jazz Guitar Trio">
-                    <span>Funk</span>
+                    <span>Electric rock</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6Pop.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7SomberWaltz.html">
                     <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/afbeeldingen/A4.png" alt="Strumming Guitars">
                     <span>Pop</span>
-                </a>
-            </section>
-            <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6FamousMelodies.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/afbeeldingen/A5.png" alt="Strumming Guitars">
-                    <span>Famous Melodies</span>
                 </a>
             </section>
         </div>
