--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6ClassicRock.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6ClassicRock.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feel the Chords Module 3</title>
-    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/M3.css">
+    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/M11.css">
 
 
 </head>
 <body>
     <header>
-        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/index.html">
+        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/index.html">
 
             <h1>Feel the Chords</h1>
         </a>
@@ -19,7 +19,11 @@
             <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
             <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
         </nav>
+        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6Index.html">
+            <h1>Module 6</h1>
+        </a>
     </header>
+
     <main>
         <section id='steezy'>
             <h2>Classic Rock</h2>
@@ -30,51 +34,51 @@
 
         <div class="lesson-block">
             <p>key of A</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of A).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of A).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Ab</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of Ab).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of Ab).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of B</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of B).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of B).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Bb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of Bb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of Bb).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of C</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of C).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of C).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of D</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of D).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of D).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Db</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of Db).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of Db).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of E</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of E).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of E).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Eb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of Eb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of Eb).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of F</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of F).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of F).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of G</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of G).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of G).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Gb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of Gb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 1, 5 - Classic Rock/Chords 1, 4, 1, 5 - Classic Rock (key of Gb).mp3"></audio>
         </div>
     
     
