--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/index.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <Header>
-        <h1>Melody Paths</h1>
+        <h1>Eartraining</h1>
         <nav>
                 <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
                 <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
@@ -17,42 +17,48 @@
     </Header>
     <main>
         <section>
-            <h2>Sing The numbers</h2>
+            <h2>Feel the chords</h2>
         </section>
         <div id="links-container">
             <section>
-            <a class="link" href="M1.html">
-                <img src="Afbeeldingen/M1.webp">
+            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M1/M1.html">
+                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/Afbeeldingen/F1.png">
                 <span>Module 1</span>
             </a>
             </section>
             <section>
-                <a class="link" href="M2.html">
-                    <img src="Afbeeldingen/M2.webp">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M2/M2.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/Afbeeldingen/F2.png">
                     <span>Module 2</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="M3.html">
-                    <img src="Afbeeldingen/M3.webp">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M3/M3.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/Afbeeldingen/F3.png">
                     <span>Module 3</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="M4.html">
-                    <img src="Afbeeldingen/M4.webp">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/M4Index.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/Afbeeldingen/F4.png">
                     <span>Module 4</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="M5.html">
-                    <img src="Afbeeldingen/M5.webp">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/index.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/Afbeeldingen/F5.png">
                     <span>Module 5</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="M6.html">
-                    <img src="Afbeeldingen/M6.webp">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6Index.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/Afbeeldingen/F6.png">
+                    <span>Module 6</span>
+                </a>
+            </section>
+            <section>
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7Index.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/Afbeeldingen/F7.png">
                     <span>Module 6</span>
                 </a>
             </section>
