--- a/Theory/demajeurtoonladder.html
+++ b/Theory/demajeurtoonladder.html
@@ -140,7 +140,7 @@
 </header>
 
 <main>
-    <h2>De Majeur Toonladder</h2>
+    <h2>De Majeur Toonladder.</h2>
     <p><strong>Wat?</strong><br> De majeurtoonladder is gewoon een groepje noten die een bepaald patroon volgen en die
     de mens blijkbaar erg leuk vindt klinken. Sterker nog, we houden er zo van dat de
     meerderheid van de songs die we op de radio horen zijn opgebouwd uit deze noten. De
