--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -66,9 +66,10 @@
             </section>
             <div id="links-container">
                 <section>
-                    <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/index.html">
+                    <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/index.html">
                         <img src="Afbeeldingen/TM.webp" alt="Tonal Map" height="200" width="200">
                         <span>Tonal Map</span>
+
                     </a>
                 </section>
                 <section>
