--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7Index.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7Index.html
@@ -35,7 +35,7 @@
         <h2>Modules</h2>
         <div id="links-container">
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7AcousticGuitarBallad.htmll">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7AcousticGuitarBallad.html">
                     <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/afbeeldingen/A1.png" alt="Counrty Waltz">
                     <span>Acoustic ballad</span>
                 </a>
@@ -48,7 +48,7 @@
             </section>
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7ElectricRock.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/afbeeldingen/A3.png" alt="Jazz Guitar Trio">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/afbeeldingen/A5.png" alt="Jazz Guitar Trio">
                     <span>Electric rock</span>
                 </a>
             </section>
