--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -15,6 +15,7 @@
         <nav>
             <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
             <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
+            <a href="https://thomastooten.github.io/JPRCursus/Leerboek/Basis/index.html">Cursus</a>
             <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
         </nav>
     </header>
