--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5Index.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5Index.html
@@ -23,22 +23,22 @@
             <h2>Akkoorden herkennen: 1 en 5</h2>
         </section>
 
-        <h2>Les 2</h2>
+
         <div id="media-container">
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Lesson 2 Deel 1comp.mp4"></video>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Lesson 2 Deel 1comp.mp4"></video>
                 <span>Deel 1</span>
             </div>
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Lesson 2 Deel 2comp.mp4"></video>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Lesson 2 Deel 2comp.mp4"></video>
                 <span>Deel 2</span>
             </div>
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Lesson 2 Deel 3comp.mp4"></video>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Lesson 2 Deel 3comp.mp4"></video>
                 <span>Deel 3</span>
             </div>
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Lesson 2 Deel 4comp.mp4"></video>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Lesson 2 Deel 4comp.mp4"></video>
                 <span>Deel 4</span>
             </div>
         </div>
@@ -46,26 +46,26 @@
         <h2>Modules</h2>
         <div id="links-container">
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4PianoBalled.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Afbeeldingen/M5/image1.png" alt="Counrty Waltz">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5/M5CountryWaltz.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/afbeeldingen/1.png" alt="Counrty Waltz">
                     <span>Counrty Waltz</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4CampfireGuitars.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Afbeeldingen/M5/2.png" alt="Dreamy">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5/M5Dreamy.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/afbeeldingen/2.png" alt="Dreamy">
                     <span>Dreamy</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4Bonfire Folky Swing.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Afbeeldingen/M5/3.png" alt="Jazz Guitar Trio">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5/M5JazzGuitarTrio.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/afbeeldingen/3.png" alt="Jazz Guitar Trio">
                     <span>Jazz Guitar Trio</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4Bonfire Folky Swing.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Afbeeldingen/M5/4.png" alt="Strumming Guitars">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5/M5StrummingGuitars.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/afbeeldingen/4.png" alt="Strumming Guitars">
                     <span>Strumming Guitars</span>
                 </a>
             </section>
@@ -74,7 +74,7 @@
         <h2>Song Analyse</h2>
         <div id="media-container">
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Song analysis - Dance the Night Away.mp4"></video>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Song analysis - Dance the Night Away.mp4"></video>
                 <span>Dance the Night Away</span>
             </div>
         </div>
