--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
     <header>
         <h1>Improvise For Real</h1>
         <nav>
-            <a href="Main index/eartraining/index.html">Ear Training</a>
-            <a href="Main index/Blues Training/index.html">Blues Training</a>
+            <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
+            <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
             <a href="https://thomastooten.github.io/JPRCursus/Leerboek/Index.html">Cursus</a>
             <a href="https://integerbook.herokuapp.com">Leadsheets IFR</a>
         </nav>
