--- a/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/index.html
+++ b/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <h1>EAR TRAINING</h1>
+        <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/index.html">
+            <h1>EAR TRAINING</h1>
+        </a>
         <nav>
             <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
             <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
