--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -63,7 +63,7 @@
                 
             </div>
                         <section>
-                <h2>Backing tracks</h2>
+                <h2>Jam Tracks</h2>
             </section>
             <div id="links-container">
                 <section>
