--- a/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/index.html
+++ b/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <Header>
-        <h1>Melody Paths</h1>
+        <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/index.html">
+            <h1>Jam Tracks</h1>
+        </a>
+
+
         <nav>
                 <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
                 <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
@@ -17,7 +21,6 @@
     </Header>
     <main>
         <section>
-            <h2>Jam Tracks</h2><br>
             <h2>Tonal Map Pure Harmony</h2>
         </section>
 
