--- a/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Lesson 1.html
+++ b/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Lesson 1.html
@@ -23,6 +23,10 @@
     <main>
         <section id='steezy'>
             <h2>Pure Harmony</h2>
+            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/index.html">
+
+                <h1>Jam Tracks</h1>
+            </a>
         </section>
         <section id="steezy">
             <h2>Campfire guitars</h2>
