--- a/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/index.html
+++ b/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/index.html
@@ -9,7 +9,7 @@
 <body>
     <Header>
         <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/index.html">
-            <h1>Jam Tracks</h1>
+            <h1>Tonal Maps</h1>
         </a>
 
 
