--- a/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Lesson 7.html
+++ b/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Lesson 7.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     <header>
-        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/index.html">
-
+        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/index.html">
             <h1>Jam Tracks</h1>
         </a>
         <nav>
@@ -21,9 +20,9 @@
         </nav>
     </header>
     <main>
-        <section id='steezy'>
-            <h2>Pure Harmony</h2>
-        </section>
+        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/index.html">
+            <h2>Pure Harmony deel 1</h2>
+        </a>
         <section id="steezy">
             <h2>Jazz Trio</h2>
         </section>
