--- a/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 7.html
+++ b/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 7.html
@@ -10,28 +10,8 @@
 </head>
 <body>
     <header>
-        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/index.html">
-
+        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/index.html">
             <h1>Jam Tracks</h1>
-        </a>
-        <nav>
-            <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
-            <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
-            <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
-        </nav>
-    </header>
-    <main>
-        <section id='steezy'>
-            <h2>Mix Harmony Lesson 7</h2>
-        </section>
-        <section id="steezy">
-            <h2>Romantic piano ballad</h2>
-        </section>
-
-
-        <div class="lesson-block">
-            <p>chords 6-, 4, 1, 3D - key of A </p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/audio/IFR_Jam_Tracks_Level_4_Mixed_Harmony_Essentials_lesson_07/track 07 - chords 6-, 4, 1, 3D, romantic piano ballad (key of A).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>chords 6-, 4, 1, 3D - key of Ab </p>
