--- a/Main index/eartraining/Jam Tracks/Seven Worlds/index.html
+++ b/Main index/eartraining/Jam Tracks/Seven Worlds/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <Header>
-        <h1>Melody Paths</h1>
+        <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">
+            <h1>EARTRAINING</h1>
+        </a>
         <nav>
                 <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
                 <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
@@ -17,7 +19,6 @@
     </Header>
     <main>
         <section>
-            <h2>Jam Tracks</h2><br>
             <h2>Seven Worlds</h2>
         </section>
 
