--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/M4Index.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/M4Index.html
@@ -26,15 +26,15 @@
         <h2>Les 1</h2>
         <div id="media-container">
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Lesson 1 deel 1comp.mp4"></video>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/Lesson4/Lesson 1 deel 1comp.mp4"></video>
                 <span>Deel 1</span>
             </div>
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Lesson 1 Deel 2comp.mp4"></video>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/Lesson4/Lesson 1 Deel 2comp.mp4"></video>
                 <span>Deel 2</span>
             </div>
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Lesson 1 Deel 3comp.mp4"></video>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/Lesson4/Lesson 1 Deel 3comp.mp4"></video>
                 <span>Deel 3</span>
             </div>
         </div>
@@ -42,19 +42,19 @@
         <h2>Modules</h2>
         <div id="links-container">
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4PianoBalled.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4PianoBalled.html">
                     <img src="Afbeeldingen/M4.webp" alt="Piano Ballad">
                     <span>Piano Ballad</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4CampfireGuitars.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4CampfireGuitars.html">
                     <img src="Afbeeldingen/M5.webp" alt="Country Waltz">
                     <span>Campfire Guitars</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4Bonfire Folky Swing.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4Bonfire Folky Swing.html">
                     <img src="Afbeeldingen/M6.webp" alt="Bonfire Folky Swing">
                     <span>Bonfire Folky Swing</span>
                 </a>
@@ -64,7 +64,7 @@
         <h2>Song Analyse</h2>
         <div id="media-container">
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4"></video>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4"></video>
                 <span>Walking on the Wild Side</span>
             </div>
         </div>
