--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/M4Index.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/M4Index.html
@@ -42,20 +42,20 @@
         <h2>Modules</h2>
         <div id="links-container">
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4PianoBalled.html">
-                    <img src="Afbeeldingen/M4.webp" alt="Piano Ballad">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/M4PianoBalled.html">
+                    <img src="Afbeeldingen/M4.png" alt="Piano Ballad">
                     <span>Piano Ballad</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4CampfireGuitars.html">
-                    <img src="Afbeeldingen/M5.webp" alt="Country Waltz">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/M4CampfireGuitars.html">
+                    <img src="Afbeeldingen/M5.png" alt="Country Waltz">
                     <span>Campfire Guitars</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4Bonfire Folky Swing.html">
-                    <img src="Afbeeldingen/M6.webp" alt="Bonfire Folky Swing">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/M4Bonfire Folky Swing.html">
+                    <img src="Afbeeldingen/M6.png" alt="Bonfire Folky Swing">
                     <span>Bonfire Folky Swing</span>
                 </a>
             </section>
