--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/M4Index.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/M4Index.html
@@ -43,7 +43,7 @@
         <div id="links-container">
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/M4PianoBalled.html">
-                    <img src="Afbeeldingen/M4.png" alt="Piano Ballad">
+                    <img src="Afbeeldingen/M4.png" width="40" alt="Piano Ballad">
                     <span>Piano Ballad</span>
                 </a>
             </section>
@@ -64,7 +64,7 @@
         <h2>Song Analyse</h2>
         <div id="media-container">
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4"></video>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/Lesson4/SA.mp4"></video>
                 <span>Walking on the Wild Side</span>
             </div>
         </div>
