--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5Index.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5Index.html
@@ -46,25 +46,25 @@
         <h2>Modules</h2>
         <div id="links-container">
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5/M5CountryWaltz.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5CountryWaltz.html">
                     <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/afbeeldingen/1.png" alt="Counrty Waltz">
                     <span>Counrty Waltz</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5/M5Dreamy.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5Dreamy.html">
                     <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/afbeeldingen/2.png" alt="Dreamy">
                     <span>Dreamy</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5/M5JazzGuitarTrio.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5JazzGuitarTrio.html">
                     <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/afbeeldingen/3.png" alt="Jazz Guitar Trio">
                     <span>Jazz Guitar Trio</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M5/M5StrummingGuitars.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5StrummingGuitars.html">
                     <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/afbeeldingen/4.png" alt="Strumming Guitars">
                     <span>Strumming Guitars</span>
                 </a>
